# x-deepagents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
examples/: multi_agent.py  multi_agent_example.py  simple_example.py
logs/: .gitkeep
reports/: .gitkeep
src/: __init__.py  api.py  cli.py
src/agents/: __init__.py  coordinator.py
src/core/: __init__.py  config.py  logger.py
src/llm/: __init__.py  providers.py
src/tools/: __init__.py
